# redevops-aws-demo

./: .gitignore  PLAN.md  README.md  compose.yml  pyproject.toml
aws_demo/: budget.py  budget_guard.py  creds.py  doctor.py  preflight.py
deploy/: compose.demo.yml
docs/: aws-fit-roadmap.md  aws-permissions.md  getting-started.md
infra/iam/: agent-policy.json  deployer-policy.json  readonly-policy.json
infra/terraform/envs/aws/: main.tf  variables.tf
infra/terraform/envs/eks/: outputs.tf  versions.tf
infra/terraform/monitoring/: main.tf
infra/terraform/safety/: README.md  budget_and_destroy.tf  outputs.tf  roles.tf  variables.tf  versions.tf
infra/terraform/safety/lambda/: emergency_destroy.py
missions/: deploy_operate.py  harden_images.py  incident_response.py  posture.py
operators/: Dockerfile  modules.yaml  service.py
operators/agentic_compliance/: core.py  operator.py
operators/agentic_privacy/: core.py  operator.py
operators/edge_sentinel/: README.md  core.py  operator.py
operators/infra_operator/: Dockerfile  README.md  entrypoint.sh
operators/operate/: core.py  operator.py
scripts/: budget-guard.sh  doctor.sh  emergency-destroy.sh  teardown.sh  up.sh
tests/: conftest.py  test_budget.py  test_creds.py  test_deploy_operate.py  test_edge_sentinel.py  test_http_wiring.py  test_incident.py  test_infra_operator.py  test_posture.py  test_preflight.py  test_service.py
