[project]
name = "redevops-aws-demo"
version = "0.0.0"
description = "ReDevOps × AWS real-time deploy-and-operate demo — Phase 0 scaffold"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "moto[sts,ce,cloudwatch,ec2]>=5.0",
    "pytest>=8.0",
    "hvac>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aws_demo"]
